[package]
name = "first"
version = "0.1.0"
authors = ["user"]
edition = "2018"
build = "build.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
nom = "5.0.1"
lalrpop-util = "0.17.2"
regex = "0.2.1"
lazy_static= "1.4.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }